# cppfoobar

./: .gitignore
CompileTimeDataDictionary/: build.sh  jsonHelper.hpp  main.cpp  main2.cpp  main3.cpp  main3.hpp  run.sh
betterEnum/: betterEnum.h  main.cpp  main.h  other.cpp
boostTests/: bind.cpp  readme
boost_udp/: simpel_udp_server.cpp
canAuxiliaryHeader/: CMakeLists.txt  Makefile  README.md  canAuxiliaryHeader  lib.cpp  main.cpp
compileTimeMalloc/: build.sh  main.cpp
compileTimeMessageDict/: build.sh  main.cpp
crc24/: main.cpp
crtp/: CMakeLists.txt  main.cpp  main.h
dbscan_clustering/: CMakeLists.txt  README.md  depth_image_cloud.csv  kitti_cloud.csv  output.csv  plot.py  run.sh  sample2d.csv  sample3d.csv
dbscan_clustering/include/: dbscan.hpp
dbscan_clustering/src/: dbscan.cpp  main.cpp
dmaPseudoRingbuffer/: main  main.cpp
ekf_kik/: CMakeLists.txt
ekf_kik/headers/: datapoint.h  fusionekf.h  kalmanfilter.h
ekf_kik/src/: datapoint.cpp  fusionekf.cpp  kalmanfilter.cpp  main.cpp
erpcExample/: CMakeLists.txt  build.sh  client.cpp  generate_erpc.sh  mixedServerClient.cpp  run.sh  runMixed.sh  server.cpp
erpcExample/erpc_services/: matrix.erpc
erpcExample/erpc_services/matrix/: matrix_multiply.h  matrix_multiply_client.cpp  matrix_multiply_server.cpp  matrix_multiply_server.h
friends/: friends.cpp  friends.h
getNestedTemplateTypes/: main.cpp
graphmlParser/: CMakeLists.txt  main.cpp  main.h  package.xml  simple.graphml  simple.graphml.xgml  test.xml
graphmlParser/include/: types.cpp  types.h
hungarian/: CMakeLists.txt  main.cpp
lely/: CMakeLists.txt  README.md  build.sh  convertEds2Hpp.sh  eds-slave.hpp  generateEdsThings.sh  master.cpp  master_staticEds.cpp  run_MasterSlaveUserchannel.sh  run_master.sh  run_slaveStatic.sh  slave.cpp  slave_staticEds.cpp  userChannelMasterSlave.cpp
lely/eds/: eds-master.hpp  eds-slave.hpp  master-eds.yaml
lely/oldStuff/: master.cpp  run_slave.sh  setup.sh  slave.cpp
loopUnroller/: README.txt  loopUnroll.cpp  main.cpp  main_unrolled.cpp
macroRecursion/: macroTest1.cpp  macroTest2.cpp
memcopyStuff/: main.cpp
memcpy_benchmark/: README.txt  memcpy_benchmark.cpp
memcpy_with_stride/: README.txt  main.cpp
misc/: bittest.cpp  callbackTest.cpp  callbackTest.h  singleton.cpp  singleton.h  virtuali.cpp  virtuali.h
modules/: build.sh  main.cpp  run.sh  speech.cxx  speech_english.cxx  speech_spanish.cxx
modules/gcm.cache/: M1.gcm  math.gcm  mod.gcm  speech.english.gcm  speech.gcm  speech.spanish.gcm
multithreading/: multithreading.cpp  multithreading.h
ntp/ntpClient/: CMakeLists.txt  main.cpp
ntp/ntpServer/: CMakeLists.txt  main.cpp
printfcpp/: printf_wrap.cpp
pythonFromCppRos/: CMakeLists.txt  Makefile  main.cpp  main.h  pythonFromCppRos  pythonFromCppRos.cbp  xaxa.py
queue/: main  main.cpp  queue.hpp  queue_impl.hpp
ringbuffer/: RingBuffer.hpp  build.sh  main  main.cpp
rosbridge_client/: CMakeLists.txt  Dockerfile  README.md  build_rosbridge_docker.sh  main.cpp  rosbridge_client  run_rosbridge_docker.sh
rxcppstuff/: CMakeLists.txt
rxcppstuff/src/: main.cpp  main1.cpp  main2.cpp
setSocketTOS_QoS/: main.cpp
simpleKalman/: .gitignore  CMakeLists.txt  main.cpp  plotGraph.py  run.sh
simpleKalman/include/: SimpleKalmanFilter.h
simpleKalman/src/: SimpleKalmanFilter.cpp
sortedContainer/: sortedContainer.cpp
sourcelocation/: main.cpp
stateMachineBla/: main.cpp
strcutInitor/: main.c  main.h  someHeader.h
structIntrospection/: IoList.hpp  Types.hpp  build.sh  main  main.cpp  main.hpp  parser.py
swig/: hello.cpp  hello.h  myPythonWrapperTester.py  readme.txt  setup.py  swigdemo.i
templates/: readme.txt  templateTest.cpp
test/: main.cpp
test_unique_ptr/: CMakeLists.txt
thread_isolation/: CMakeLists.txt  Makefile  main.cpp  thread_isolation
tuple_node_descriptions/: main.cpp
uniquetuple/: uniquetuple.cpp
unknowFunctionWrapperTimeout/: CMakeLists.txt  README.md  main.cpp  main.h  untitled
virtuali/: Object.h  main.cpp
xxhash/: main.cpp
