<?xml version="1.0"?>
<package format="2">
    <name>graphmlParser</name>
    <version>0.1.0</version>
    <description>xaxa</description>
    <maintainer email="pfankhauser@ethz.ch">Peter Fankhauser</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>

    <!-- ros dependencys -->
    <depend>roscpp</depend>
    <depend>rospy</depend>
</package>
